# kemi

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  demo.cast  demo_link.md  demo_script.sh  kemi.db  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  configuration.md  quickstart.md  recipes.md
src/kemi/: __init__.py  __main__.py  cli.py  core.py  dedup.py  lifecycle.py  mcp_server.py  models.py  sanitize.py  scoring.py
src/kemi/adapters/: __init__.py  base.py
src/kemi/adapters/embedding/: custom.py  fastembed.py  openai.py
src/kemi/adapters/storage/: custom.py  json.py  sqlite.py
src/kemi/integrations/: langchain.py
tests/: conftest.py  test_core.py  test_dedup.py  test_export_import.py  test_hybrid_search.py  test_lifecycle.py  test_models.py  test_new_features.py  test_sanitize.py  test_scoring.py  test_tags.py
tests/adapters/: __init__.py  test_custom_embed.py  test_json.py  test_sqlite.py
