[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kemi"
version = "0.1.0"
description = "Persistent memory for AI agents. Three methods. Zero infra."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
local = ["fastembed>=0.2.0"]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "fastembed>=0.2.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://usekemi.com"
Repository = "https://github.com/alokvadera/kemi"
Issues = "https://github.com/alokvadera/kemi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kemi"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kemi --cov-report=term-missing --cov-fail-under=80"